# safeurl-python

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
safeurl/: safeurl.py  safeurl_examples.py  safeurl_tests.py
